[gd_scene load_steps=8 format=2]

[ext_resource path="res://gui/RuleBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/GUI.gd" type="Script" id=2]
[ext_resource path="res://gui/theme.tres" type="Theme" id=3]
[ext_resource path="res://gui/RuleContainer.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 3.0
content_margin_right = 3.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0.219608, 0.219608, 0.219608, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id=1]
resource_name = "Hide"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.3, 1 ),
"update": 0,
"values": [ Vector2( 0, 780 ), Vector2( 0, 1050 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/CenterContainer/HideButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.392157 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/CenterContainer/HideButton:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Hide menu", "Show menu" ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 780 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/CenterContainer/HideButton:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/CenterContainer/HideButton:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Hide menu" ]
}

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 780.0
margin_right = -1920.0
margin_bottom = -300.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 35.0
margin_right = 1920.0
margin_bottom = 335.0
rect_min_size = Vector2( 1920, 300 )
color = Color( 0, 0, 0, 0.768627 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 300 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 25 )

[node name="HideButton" type="Button" parent="VBoxContainer/CenterContainer"]
margin_left = 913.0
margin_right = 1007.0
margin_bottom = 28.0
text = "Hide menu"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 1920.0
margin_bottom = 36.0

[node name="Split" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 1920.0
margin_bottom = 282.0
rect_min_size = Vector2( 1920, 0 )
split_offset = 600

[node name="GeneralContainer" type="HBoxContainer" parent="VBoxContainer/Split"]
margin_right = 956.0
margin_bottom = 242.0

[node name="MainSettings" type="VBoxContainer" parent="VBoxContainer/Split/GeneralContainer"]
margin_right = 144.0
margin_bottom = 242.0
alignment = 2

[node name="FPSLabel" type="Label" parent="VBoxContainer/Split/GeneralContainer/MainSettings"]
use_parent_material = true
margin_top = 154.0
margin_right = 144.0
margin_bottom = 178.0
text = "FPS: 0"
align = 1

[node name="FullscreenButton" type="Button" parent="VBoxContainer/Split/GeneralContainer/MainSettings"]
margin_top = 182.0
margin_right = 144.0
margin_bottom = 210.0
text = "Toggle Fullscreen"

[node name="QuitButton" type="Button" parent="VBoxContainer/Split/GeneralContainer/MainSettings"]
margin_top = 214.0
margin_right = 144.0
margin_bottom = 242.0
text = "Quit"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Split/GeneralContainer"]
margin_left = 148.0
margin_right = 152.0
margin_bottom = 242.0

[node name="MusicContainer" type="VBoxContainer" parent="VBoxContainer/Split/GeneralContainer"]
margin_left = 156.0
margin_right = 281.0
margin_bottom = 242.0

[node name="Label" type="Label" parent="VBoxContainer/Split/GeneralContainer/MusicContainer"]
margin_right = 125.0
margin_bottom = 24.0
text = "Music control"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Split/GeneralContainer/MusicContainer"]
margin_top = 28.0
margin_right = 125.0
margin_bottom = 32.0

[node name="LoadAudioButton" type="Button" parent="VBoxContainer/Split/GeneralContainer/MusicContainer"]
margin_top = 36.0
margin_right = 125.0
margin_bottom = 64.0
text = "Open audio file"

[node name="Volume" type="Label" parent="VBoxContainer/Split/GeneralContainer/MusicContainer"]
margin_top = 68.0
margin_right = 125.0
margin_bottom = 92.0
text = "Volume"
align = 1

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/Split/GeneralContainer/MusicContainer"]
margin_top = 96.0
margin_right = 125.0
margin_bottom = 112.0
step = 5.0
value = 100.0

[node name="StopButton" type="Button" parent="VBoxContainer/Split/GeneralContainer/MusicContainer"]
margin_top = 116.0
margin_right = 125.0
margin_bottom = 144.0
text = "Stop playing"

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/Split/GeneralContainer"]
margin_left = 285.0
margin_right = 289.0
margin_bottom = 242.0

[node name="PresetContainer" type="VBoxContainer" parent="VBoxContainer/Split/GeneralContainer"]
margin_left = 293.0
margin_right = 661.0
margin_bottom = 242.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Split/GeneralContainer/PresetContainer"]
margin_right = 368.0
margin_bottom = 24.0
text = "Presets"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Split/GeneralContainer/PresetContainer"]
margin_top = 28.0
margin_right = 368.0
margin_bottom = 32.0

[node name="PresetListContainer" type="ScrollContainer" parent="VBoxContainer/Split/GeneralContainer/PresetContainer"]
margin_top = 36.0
margin_right = 368.0
margin_bottom = 178.0
rect_min_size = Vector2( 160, 0 )
size_flags_vertical = 3
follow_focus = true

[node name="PresetList" type="ItemList" parent="VBoxContainer/Split/GeneralContainer/PresetContainer/PresetListContainer"]
margin_right = 368.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SaveButton" type="Button" parent="VBoxContainer/Split/GeneralContainer/PresetContainer"]
margin_top = 182.0
margin_right = 368.0
margin_bottom = 210.0
size_flags_horizontal = 3
text = "Save"

[node name="ImportButtons" type="HBoxContainer" parent="VBoxContainer/Split/GeneralContainer/PresetContainer"]
margin_top = 214.0
margin_right = 368.0
margin_bottom = 242.0

[node name="ImportButton" type="Button" parent="VBoxContainer/Split/GeneralContainer/PresetContainer/ImportButtons"]
margin_right = 182.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Import"

[node name="ExportButton" type="Button" parent="VBoxContainer/Split/GeneralContainer/PresetContainer/ImportButtons"]
margin_left = 186.0
margin_right = 368.0
margin_bottom = 28.0
size_flags_horizontal = 3
text = "Export"

[node name="VSeparator4" type="VSeparator" parent="VBoxContainer/Split/GeneralContainer"]
margin_left = 665.0
margin_right = 669.0
margin_bottom = 242.0

[node name="WorldSettingsContainer" type="VBoxContainer" parent="VBoxContainer/Split/GeneralContainer"]
margin_left = 673.0
margin_right = 825.0
margin_bottom = 242.0

[node name="Label" type="Label" parent="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer"]
margin_right = 152.0
margin_bottom = 24.0
text = "World settings"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer"]
margin_top = 28.0
margin_right = 152.0
margin_bottom = 32.0

[node name="RestartButton" type="Button" parent="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer"]
margin_top = 36.0
margin_right = 152.0
margin_bottom = 64.0
text = "Restart"

[node name="RandomButton" type="Button" parent="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer"]
margin_top = 68.0
margin_right = 152.0
margin_bottom = 96.0
text = "Randomize rules"

[node name="BoundariesButton" type="OptionButton" parent="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer"]
margin_top = 100.0
margin_right = 152.0
margin_bottom = 128.0
pressed = true
text = "Boundaries"

[node name="WorldSizeContainer" type="HBoxContainer" parent="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer"]
margin_top = 132.0
margin_right = 152.0
margin_bottom = 194.0

[node name="WorldWidthContainer" type="VBoxContainer" parent="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer/WorldSizeContainer"]
margin_right = 74.0
margin_bottom = 62.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer/WorldSizeContainer/WorldWidthContainer"]
margin_right = 74.0
margin_bottom = 24.0
text = "Width"
align = 1
valign = 1

[node name="WorldWidthSpinbox" type="SpinBox" parent="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer/WorldSizeContainer/WorldWidthContainer"]
margin_top = 28.0
margin_right = 74.0
margin_bottom = 62.0
min_value = 400.0
max_value = 1920.0
step = 10.0
value = 1920.0
rounded = true
suffix = "px"

[node name="WorldHeightContainer" type="VBoxContainer" parent="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer/WorldSizeContainer"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 62.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer/WorldSizeContainer/WorldHeightContainer"]
margin_right = 74.0
margin_bottom = 24.0
text = "Height"
align = 1
valign = 1

[node name="WorldHeightSpinbox" type="SpinBox" parent="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer/WorldSizeContainer/WorldHeightContainer"]
margin_top = 28.0
margin_right = 74.0
margin_bottom = 62.0
min_value = 400.0
max_value = 1080.0
step = 10.0
value = 1080.0
rounded = true
suffix = "px"

[node name="Label2" type="Label" parent="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer"]
margin_top = 198.0
margin_right = 152.0
margin_bottom = 222.0
text = "Viscosity"
align = 1

[node name="ViscositySlider" type="HSlider" parent="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer"]
margin_top = 226.0
margin_right = 152.0
margin_bottom = 242.0
max_value = 1.0
step = 0.1
value = 0.5
tick_count = 3
ticks_on_borders = true

[node name="VSeparator5" type="VSeparator" parent="VBoxContainer/Split/GeneralContainer"]
margin_left = 829.0
margin_right = 833.0
margin_bottom = 242.0

[node name="ParticleSettingsContainer" type="VBoxContainer" parent="VBoxContainer/Split/GeneralContainer"]
margin_left = 837.0
margin_right = 956.0
margin_bottom = 242.0

[node name="Label" type="Label" parent="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer"]
margin_right = 119.0
margin_bottom = 24.0
text = "Particle settings"
align = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer"]
margin_top = 28.0
margin_right = 119.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer"]
margin_top = 36.0
margin_right = 119.0
margin_bottom = 70.0

[node name="RedColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 34.0
rect_min_size = Vector2( 32, 0 )
custom_styles/normal = SubResource( 3 )

[node name="RedCountSpinBox" type="SpinBox" parent="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 119.0
margin_bottom = 34.0
size_flags_horizontal = 3
max_value = 5000.0
step = 10.0
value = 900.0
rounded = true
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer"]
margin_top = 74.0
margin_right = 119.0
margin_bottom = 108.0

[node name="GreenColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer/HBoxContainer2"]
margin_right = 32.0
margin_bottom = 34.0
rect_min_size = Vector2( 32, 0 )
custom_styles/normal = SubResource( 3 )

[node name="GreenCountSpinBox" type="SpinBox" parent="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer/HBoxContainer2"]
margin_left = 36.0
margin_right = 119.0
margin_bottom = 34.0
size_flags_horizontal = 3
max_value = 5000.0
step = 10.0
value = 900.0
rounded = true
align = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer"]
margin_top = 112.0
margin_right = 119.0
margin_bottom = 146.0

[node name="WhiteColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer/HBoxContainer3"]
margin_right = 32.0
margin_bottom = 34.0
rect_min_size = Vector2( 32, 0 )
custom_styles/normal = SubResource( 3 )

[node name="WhiteCountSpinBox" type="SpinBox" parent="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer/HBoxContainer3"]
margin_left = 36.0
margin_right = 119.0
margin_bottom = 34.0
size_flags_horizontal = 3
max_value = 5000.0
step = 10.0
value = 900.0
rounded = true
align = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer"]
margin_top = 150.0
margin_right = 119.0
margin_bottom = 184.0

[node name="BlueColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer/HBoxContainer4"]
margin_right = 32.0
margin_bottom = 34.0
rect_min_size = Vector2( 32, 0 )
custom_styles/normal = SubResource( 3 )

[node name="BlueCountSpinBox" type="SpinBox" parent="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer/HBoxContainer4"]
margin_left = 36.0
margin_right = 119.0
margin_bottom = 34.0
size_flags_horizontal = 3
max_value = 5000.0
step = 10.0
value = 900.0
rounded = true
align = 1

[node name="CountApplyButton" type="Button" parent="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer"]
margin_top = 188.0
margin_right = 119.0
margin_bottom = 216.0
text = "Apply"

[node name="RuleContainer" type="GridContainer" parent="VBoxContainer/Split"]
margin_left = 968.0
margin_top = 9.0
margin_right = 1920.0
margin_bottom = 233.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/vseparation = 16
columns = 4
script = ExtResource( 4 )

[node name="RuleBox" parent="VBoxContainer/Split/RuleContainer" instance=ExtResource( 1 )]
margin_bottom = 44.0

[node name="RuleBox2" parent="VBoxContainer/Split/RuleContainer" instance=ExtResource( 1 )]
margin_left = 239.0
margin_right = 474.0
margin_bottom = 44.0

[node name="RuleBox3" parent="VBoxContainer/Split/RuleContainer" instance=ExtResource( 1 )]
margin_left = 478.0
margin_right = 713.0
margin_bottom = 44.0

[node name="RuleBox4" parent="VBoxContainer/Split/RuleContainer" instance=ExtResource( 1 )]
margin_left = 717.0
margin_right = 952.0
margin_bottom = 44.0

[node name="RuleBox5" parent="VBoxContainer/Split/RuleContainer" instance=ExtResource( 1 )]
margin_top = 60.0
margin_bottom = 104.0

[node name="RuleBox6" parent="VBoxContainer/Split/RuleContainer" instance=ExtResource( 1 )]
margin_left = 239.0
margin_top = 60.0
margin_right = 474.0
margin_bottom = 104.0

[node name="RuleBox7" parent="VBoxContainer/Split/RuleContainer" instance=ExtResource( 1 )]
margin_left = 478.0
margin_top = 60.0
margin_right = 713.0
margin_bottom = 104.0

[node name="RuleBox8" parent="VBoxContainer/Split/RuleContainer" instance=ExtResource( 1 )]
margin_left = 717.0
margin_top = 60.0
margin_right = 952.0
margin_bottom = 104.0

[node name="RuleBox9" parent="VBoxContainer/Split/RuleContainer" instance=ExtResource( 1 )]
margin_top = 120.0
margin_bottom = 164.0

[node name="RuleBox10" parent="VBoxContainer/Split/RuleContainer" instance=ExtResource( 1 )]
margin_left = 239.0
margin_top = 120.0
margin_right = 474.0
margin_bottom = 164.0

[node name="RuleBox11" parent="VBoxContainer/Split/RuleContainer" instance=ExtResource( 1 )]
margin_left = 478.0
margin_top = 120.0
margin_right = 713.0
margin_bottom = 164.0

[node name="RuleBox12" parent="VBoxContainer/Split/RuleContainer" instance=ExtResource( 1 )]
margin_left = 717.0
margin_top = 120.0
margin_right = 952.0
margin_bottom = 164.0

[node name="RuleBox13" parent="VBoxContainer/Split/RuleContainer" instance=ExtResource( 1 )]
margin_top = 180.0
margin_bottom = 224.0

[node name="RuleBox14" parent="VBoxContainer/Split/RuleContainer" instance=ExtResource( 1 )]
margin_left = 239.0
margin_top = 180.0
margin_right = 474.0
margin_bottom = 224.0

[node name="RuleBox15" parent="VBoxContainer/Split/RuleContainer" instance=ExtResource( 1 )]
margin_left = 478.0
margin_top = 180.0
margin_right = 713.0
margin_bottom = 224.0

[node name="RuleBox16" parent="VBoxContainer/Split/RuleContainer" instance=ExtResource( 1 )]
margin_left = 717.0
margin_top = 180.0
margin_right = 952.0
margin_bottom = 224.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hide = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="SavePanel" type="ConfirmationDialog" parent="."]
margin_right = 8.0
margin_bottom = 8.0
theme = ExtResource( 3 )
window_title = "Pick a name for these rules"

[node name="RuleNameEdit" type="LineEdit" parent="SavePanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 238.0
margin_bottom = 42.0
align = 1
max_length = 32

[node name="ImportPanel" type="ConfirmationDialog" parent="."]
margin_right = 8.0
margin_bottom = 8.0
theme = ExtResource( 3 )
window_title = "Paste the import string here"

[node name="ImportStringEdit" type="LineEdit" parent="ImportPanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 245.0
margin_bottom = 42.0
max_length = 512

[node name="ExportPanel" type="AcceptDialog" parent="."]
margin_right = 8.0
margin_bottom = 8.0
theme = ExtResource( 3 )
window_title = "Copy this string to share it!"

[node name="ExportStringEdit" type="LineEdit" parent="ExportPanel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 237.0
margin_bottom = 42.0
align = 1
max_length = 512
editable = false

[node name="OpenAudioFileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.mp3, *.ogg ; Audio files\"" )

[connection signal="pressed" from="VBoxContainer/CenterContainer/HideButton" to="." method="_on_HideButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Split/GeneralContainer/MainSettings/FullscreenButton" to="." method="_on_FullscreenButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Split/GeneralContainer/MainSettings/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Split/GeneralContainer/MusicContainer/LoadAudioButton" to="." method="_on_LoadAudioButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/Split/GeneralContainer/MusicContainer/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Split/GeneralContainer/MusicContainer/StopButton" to="." method="_on_StopButton_pressed"]
[connection signal="item_selected" from="VBoxContainer/Split/GeneralContainer/PresetContainer/PresetListContainer/PresetList" to="." method="_on_PresetList_item_selected"]
[connection signal="pressed" from="VBoxContainer/Split/GeneralContainer/PresetContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Split/GeneralContainer/PresetContainer/ImportButtons/ImportButton" to="." method="_on_ImportButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Split/GeneralContainer/PresetContainer/ImportButtons/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer/RandomButton" to="." method="_on_RandomButton_pressed"]
[connection signal="item_selected" from="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer/BoundariesButton" to="." method="_on_BoundariesButton_item_selected"]
[connection signal="value_changed" from="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer/WorldSizeContainer/WorldWidthContainer/WorldWidthSpinbox" to="." method="_on_WorldWidthSpinbox_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer/WorldSizeContainer/WorldHeightContainer/WorldHeightSpinbox" to="." method="_on_WorldHeightSpinbox_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Split/GeneralContainer/WorldSettingsContainer/ViscositySlider" to="." method="_on_ViscositySlider_value_changed"]
[connection signal="color_changed" from="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer/HBoxContainer/RedColorPickerButton" to="." method="_on_RedColorPickerButton_color_changed"]
[connection signal="color_changed" from="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer/HBoxContainer2/GreenColorPickerButton" to="." method="_on_GreenColorPickerButton_color_changed"]
[connection signal="color_changed" from="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer/HBoxContainer3/WhiteColorPickerButton" to="." method="_on_WhiteColorPickerButton_color_changed"]
[connection signal="color_changed" from="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer/HBoxContainer4/BlueColorPickerButton" to="." method="_on_BlueColorPickerButton_color_changed"]
[connection signal="pressed" from="VBoxContainer/Split/GeneralContainer/ParticleSettingsContainer/CountApplyButton" to="." method="_on_CountApplyButton_pressed"]
[connection signal="attraction_updated" from="VBoxContainer/Split/RuleContainer" to="." method="_on_RuleContainer_attraction_updated"]
[connection signal="range_updated" from="VBoxContainer/Split/RuleContainer" to="." method="_on_RuleContainer_range_updated"]
[connection signal="confirmed" from="SavePanel" to="." method="_on_SavePanel_confirmed"]
[connection signal="confirmed" from="ImportPanel" to="." method="_on_ImportPanel_confirmed"]
[connection signal="file_selected" from="OpenAudioFileDialog" to="." method="_on_OpenAudioFileDialog_file_selected"]
